# geoguessr-report

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  report.py  util.py
sample/: geoguessr_review_gemini-2_5-flash-preview-05-20.md  geoguessr_review_gemini-2_5-pro-preview-06-05.md  geoguessr_review_gpt-4_1.md  geoguessr_review_gpt-4o.md  geoguessr_review_o3.md  geoguessr_review_o4-mini.md
