[project]
name = "geoguessr-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "pillow",
    "pycountry",
    "langchain-core",
    "langchain-google-genai",
    "python-dotenv",
    "beautifulsoup4",
]
